name:                hethtest
version:             0.1.0.0
synopsis:            Web3 Tests
homepage:            none
license:             BSD3
license-file:        LICENSE
author:              The Linux Kitten
maintainer:          thelinuxkitten@thelinuxkitten.org
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable hethtest
  main-is:             main.hs
  build-depends:       base >=4 && <5
                     , aeson
                     , hethrpc
                     , hjsonrpc
                     , hjsonrpc-http
                     , hjsonrpc-http-server
                     , monad-logger
                     , monad-control
                     , text
                     , transformers
  ghc-options:       -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hethdapp
  main-is:             main.hs
  other-modules:       EthDapps.Test1
  build-depends:       base >=4 && <5
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , hethdapp
                     , hjsonrpc
                     , hethrpc
                     , lifted-base
                     , template-haskell
                     , text
                     , transformers
  ghc-options:       -threaded -ddump-splices
  hs-source-dirs:    demo
  default-language:  Haskell2010

